# macrofied-toolbox-rs

./: .gitignore  Cargo.toml  README.md  build.rs
build_macros/: mod.rs  result.rs
design/: macro-design.xlsm  macro-design.xlsx
examples/: README.md  option-macro.rs  result-macro.rs
scripts-bash/: clippy.sh  publish.sh  test-clean.sh  test.sh
scripts-ps/: clippy.ps1  publish.ps1  test-clean.ps1  test.ps1
src/: lib.rs  result.rs
src/common/: mod.rs  models.rs  parse.rs  tokenize.rs  tracing.rs
src/option/: mod.rs  parse.rs  tokenize.rs
src/option_macro/: mod.rs  parse.rs  parts.rs  tokenize.rs
src/result/: kw.rs  mod.rs  parse.rs  parts.rs  tokenize.rs
src/result_macro/: mod.rs  parse.rs  parts.rs  tokenize.rs
src/tests/: mod.rs  result_tests.rs  version.rs
src/tests/utils/: mod.rs
tests/: option_macro_expression_tests.rs  option_macro_expression_when_some_tests.rs  option_macro_message_tests.rs  option_macro_optional_semicolons_tests.rs  option_macro_tests.rs  option_macro_try_tests.rs  result_macro_expression_tests.rs  result_macro_expression_when_some_tests.rs  result_macro_message_tests.rs  result_macro_optional_semicolons_tests.rs  result_macro_tests.rs  result_macro_try_tests.rs  tests.rs
tests/option_compile_failed/: invalid_when_expression_should_fail_to_compile.rs  invalid_when_expression_should_fail_to_compile.stderr  try_in_block_when_expression_should_fail_to_compile.rs  try_in_block_when_expression_should_fail_to_compile.stderr  when_some_message_should_fail_to_compile.rs  when_some_message_should_fail_to_compile.stderr
tests/result_compile_failed/: invalid_when_expression_should_fail_to_compile.rs  invalid_when_expression_should_fail_to_compile.stderr  mismatched_return_type_should_fail_to_compile.rs  mismatched_return_type_should_fail_to_compile.stderr  try_in_block_when_expression_should_fail_to_compile.rs  try_in_block_when_expression_should_fail_to_compile.stderr  when_ok_message_should_fail_to_compile.rs  when_ok_message_should_fail_to_compile.stderr
