[package]
name = "macrofied-toolbox"
version = "0.2.0"
edition = "2018"
description = "This library provides an ergonomic experience of adding debugging messages to rust's Result<T,E> and Option<T> patterns"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "LICENSE-MIT", "README.md"]
homepage = "https://github.com/Nejat/macrofied-toolbox-rs"
repository = "https://github.com/Nejat/macrofied-toolbox-rs"
keywords = ["option", "result", "command", "path"]
authors = ["Nejat<nejatoz@gmail.com>"]
categories = ["rust-pattern"]

[package.metadata.docs.rs]
features = ["all-debug"]

[lib]
proc-macro = true

[dependencies]
bitflags = "1.3"
cfg-if = "1.0"
proc-macro2 = "1.0"
quote = "1"
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
test-toolbox = { version = "0.2", features = ["expected","capture"] }
trybuild = { version = "1.0", features = ["diff"] }
version-sync = "0.9"

[[test]]
name = "macro-tests"
path = "tests/tests.rs"

[features]
default = []
all = ["option", "result"]
all-debug = ["option-debug", "result-debug"]
option = []
option-debug = ["option"]
result = []
result-debug = ["result"]
trace = [] # feature should only be used for tests or examples

[[example]]
name = "result-macro"
path = "examples/result-macro.rs"
required-features = ["result"]

[[example]]
name = "option-macro"
path = "examples/option-macro.rs"
required-features = ["option"]