[package]
name = "macrofied-toolbox"
version = "0.4.2"
edition = "2021"
description = "This library provides an ergonomic experience of adding debugging messages to rust's Result<T,E> and Option<T> patterns"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "LICENSE-MIT", "README.md"]
homepage = "https://github.com/Nejat/macrofied-toolbox-rs"
repository = "https://github.com/Nejat/macrofied-toolbox-rs"
keywords = ["option", "result", "command", "path"]
authors = ["Nejat<nejatoz@gmail.com>"]
categories = ["rust-patterns"]

[package.metadata.docs.rs]
features = ["all-debug"]

[lib]
proc-macro = true

[dependencies]
bitflags = { version = "1", optional = true }
cfg-if = { version = "1", optional = true }
proc-macro2 = { version = "1", optional = true }
quote = { version = "1", optional = true }
syn = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
test-toolbox = { version = "0.5", features = ["expected","capture"] }
trybuild = { version = "1", features = ["diff"] }
version-sync = "0.9"

[[test]]
name = "macro-tests"
path = "tests/tests.rs"

[features]
default = []
depends = [ "bitflags", "cfg-if", "proc-macro2", "quote", "syn" ]
all = ["option", "result"]
all-debug = ["option-debug", "result-debug"]
option = ["depends"]
option-debug = ["option"]
result = ["depends"]
result-debug = ["result"]
trace = [] # feature should only be used for tests or examples

[[example]]
name = "result-macro"
path = "examples/result-macro.rs"
required-features = ["result"]

[[example]]
name = "option-macro"
path = "examples/option-macro.rs"
required-features = ["option"]